sign in sign up mobile responsive

--- a/src/app/auth/sign-up/email-verify/email-verify.component.html
+++ b/src/app/auth/sign-up/email-verify/email-verify.component.html
@@ -16,7 +16,7 @@
                     </mat-error>
                 </div>
                 <div class="disflex">
-                    <button class="disBut" mat-flat-button color="danger" routerLink="/auth/login"
+                    <button class="disBut" mat-flat-button color="primary" routerLink="/auth/login"
                     type="submit">{{'Back' |
                     uppercase}}</button>
                     <button class="disBut ml-3" mat-flat-button color="primary" type="submit">{{'Verify' |
