--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,10 @@
   <div class="home_container">
   <div class="get_started">
     <div class="">
-      <img class="col-12 cur_pointer" routerLink='/user/schedule' src="../../assets/home_img1.svg" alt="">
+      <img class="col-12 cur_pointer" routerLink='/user/schedule' src="../../assets/Hero Page getStarted.svg" alt="">
+      <div class="getStartedCont">
+        <button routerLink='/user/schedule' class="getStarted">GET STARTED</button>
+      </div>
     </div>
   </div>
 
