--- a/src/app/auth/forget-password/forget-password.component.html
+++ b/src/app/auth/forget-password/forget-password.component.html
@@ -16,11 +16,12 @@
                     </mat-error>
                 </div>
                 <div class="disflex">
-                    <button class="disBut" mat-flat-button color="primary" type="submit">{{'Proceed' |
+                    <button class="disBut" mat-flat-button color="primary" routerLink="/auth/login"
+                    type="submit">{{'Back' |
+                    uppercase}}</button>
+                    <button class="disBut  ml-3" mat-flat-button color="primary" type="submit">{{'Proceed' |
                         uppercase}}</button>
-                    <button class="disBut ml-2" mat-flat-button color="danger" routerLink="/auth/login"
-                        type="submit">{{'Back' |
-                        uppercase}}</button>
+
                 </div>
             </form>
         </div>
