--- a/src/app/auth/sign-up/email-verify/email-verify.component.scss
+++ b/src/app/auth/sign-up/email-verify/email-verify.component.scss
@@ -117,3 +117,116 @@ mat-label {
         opacity: 0;
     }
 }
+@media screen and (max-width:426px)  {
+    .background{
+        height: 80vh;
+    }
+    .glassy-form-container {
+        width: 90%;
+        height: 50vh;
+        top: 0;
+        padding: 5px;
+    }
+    .section-b {   
+        .input {
+            padding: 10px;
+            border-radius: 5px;
+            width: 100%;
+            line-height: 15px;
+        }
+        mat-select{
+            width: 95% !important;
+        }
+    }
+    .glassy-form {
+        padding: 20px;
+    
+        form {
+            h2 {
+                font-size: 18px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+    mat-label {
+        font-size: 16px;
+    }
+    .header{
+        img{
+            width: 10rem !important;
+            height: 3rem !important;
+        }
+    }
+    .password-toggle-button {
+        right: 10px;
+    }
+}
+
+@media screen and (min-width:427px) and (max-width:769px)  {
+    .background{
+        height: 80vh;
+    }
+    .glassy-form-container {
+        width: 70%;
+        height: 60vh;
+        top: 0;
+    }
+    .section-b {   
+        .input {
+            padding: 15px;
+            border-radius: 5px;
+            width: 100%;
+            line-height: 15px;
+        }
+        mat-select{
+            padding: 15px;
+            width: 100% !important;
+        }
+    }
+    .glassy-form {
+        padding: 20px;
+        form {
+            h2 {
+                font-size: 18px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+    mat-label {
+        font-size: 16px;
+    }
+}
+@media screen and (min-width:770px) and (max-width:1024px) {
+    .background{
+        height: 80vh;
+    }
+    .glassy-form-container {
+        width: 40%;
+        height: 50vh;
+        top: 0;
+    }
+    .section-b {   
+        .input {
+            padding: 15px;
+            border-radius: 5px;
+            width: 100%;
+            line-height: 15px;
+        }
+        mat-select{
+            padding: 15px;
+            width: 100% !important;
+        }
+    }
+    .glassy-form {
+        padding: 20px;
+        form {
+            h2 {
+                font-size: 18px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+    mat-label {
+        font-size: 24px;
+    }
+}
