--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,83 +1,99 @@
 <div class="background">
-    <div class="glassy-form-container">
-      <div class="glassy-form">
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
-          <div class="header" style="text-align: center;">
-            <h2 class="header" style="color: #fff;font-weight: 600;">Sign Up</h2>
-          </div>
-          <div class="section-b col-md-12">
-            <mat-label>Name</mat-label>
-            <input class="input" type="text" name="name" matInput formControlName="name" required>
-          </div>
-          <!-- <div class="section-b col-md-12">
+  <div class="glassy-form-container">
+    <div class="glassy-form">
+      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="header" style="text-align: center;">
+          <h2 class="header" style="color: #fff;font-weight: 600;">Sign Up</h2>
+        </div>
+        <div class="section-b col-md-12">
+          <mat-label>Name</mat-label>
+          <input class="input" type="text" name="name" matInput formControlName="name" required>
+        </div>
+        <!-- <div class="section-b col-md-12">
             <mat-label>Email</mat-label>
             <input class="input" type="email" name="email" matInput formControlName="email" >
             <mat-error *ngIf="form.get('email').invalid && (form.get('email').dirty || submitted)">
               {{ form.get('email').errors?.pattern ? 'Email is Invalid' : 'Email is required'}}
             </mat-error>
           </div> -->
-          <div class="section-b col-md-12">
-            <mat-label>Email</mat-label>
-            <input class="input" type="email" name="email" matInput formControlName="email">
+        <div class="section-b col-md-12">
+          <mat-label>Email</mat-label>
+          <input class="input" type="email" name="email" matInput formControlName="email">
+        </div>
+        <!-- <div class="section-b col-md-12 timezone">
+          <mat-label>Time Zone</mat-label>
+          <mat-select style="background-color: #111111;" formControlName="timeZone">
+            <mat-option>
+              <ngx-mat-select-search placeholderLabel="Search..." noEntriesFoundLabel="No region found"
+                aria-hidden="true">
+              </ngx-mat-select-search>
+            </mat-option>
+            <mat-option style="background-color: #111111; color: #fff;" *ngFor="let timeZone of filteredTimeZones | timezoneFilter: searchControl.value"
+              [value]="timeZone.value">
+              {{ timeZone.label }}
+            </mat-option>
+          </mat-select>
+        </div> -->
+
+        <div class="section-b col-md-12 timezone">
+          <mat-label>Time Zone</mat-label>
+          <mat-select style="background-color: #111111;" formControlName="timeZone" [value]="selectedTimeZone">
+            <mat-option>
+              <ngx-mat-select-search placeholderLabel="Search..." noEntriesFoundLabel="No region found"
+                aria-hidden="true" (input)="filterTimeZones($event.target.value)">
+              </ngx-mat-select-search>
+            </mat-option>
+            <!-- Render all time zones in the dropdown -->
+            <mat-option style="background-color: #111111; color: #fff;" *ngFor="let timeZone of filteredTimeZones"
+              [value]="timeZone.value">
+              {{ timeZone.label }}
+            </mat-option>
+          </mat-select>
+        </div>
+  
+        <div class="section-b col-md-12">
+          <mat-label>Password</mat-label>
+          <!-- <input class="input" type="password" name="password" matInput formControlName="password" required> -->
+          <div class="password-input-container">
+            <input class="input" type="{{ hidePassword ? 'password' : 'text' }}" name="password" matInput
+              formControlName="password" maxlength="50" required>
+            <button mat-icon-button type="button" (click)="togglePasswordVisibility()" class="password-toggle-button">
+              <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
           </div>
-          <div class="section-b col-md-12 timezone">
-            <mat-label>Time Zone</mat-label>
-            <mat-select style="background-color: #111111;" formControlName="timeZone">
-              <mat-option style="background-color: #111111; color: #fff;" *ngFor="let timeZone of timeZones" [value]="timeZone.value">
-                {{ timeZone.label }}
-              </mat-option>
-            </mat-select>
+          <mat-error *ngIf="form.get('password').invalid && (form.get('password').dirty || submitted)">
+            Password must be at least 8 characters long and contain at least one uppercase letter, one numeric value,
+            and one special character.
+          </mat-error>
+        </div>
+        <div class="section-b col-md-12">
+          <mat-label>Confirm Password</mat-label>
+          <!-- <input class="input" type="password" name="confirmPassword" matInput formControlName="confirmPassword" required> -->
+          <div class="password-input-container">
+            <input class="input" type="{{ hideConfirmPassword ? 'password' : 'text' }}" name="confirmPassword" matInput
+              formControlName="confirmPassword" maxlength="50" required>
+            <button mat-icon-button type="button" (click)="toggleConfirmPasswordVisibility()"
+              class="password-toggle-button">
+              <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
           </div>
-          <!-- <div class="section-b col-md-12">
-            <mat-label>Time Zone</mat-label>
-            <input class="input" type="text" placeholder="Search time zone" [formControl]="searchControl">
-            <mat-select style="background-color: #111111;" formControlName="timeZone">
-              <mat-option style="background-color: #111111; color: #fff;" *ngFor="let timeZone of filteredTimeZones" [value]="timeZone.value">
-                {{ timeZone.label }}
-              </mat-option>
-            </mat-select>
-          </div>
-           -->
-          
-          <div class="section-b col-md-12">
-            <mat-label>Password</mat-label>
-            <!-- <input class="input" type="password" name="password" matInput formControlName="password" required> -->
-            <div class="password-input-container">
-              <input class="input" type="{{ hidePassword ? 'password' : 'text' }}" name="password" matInput formControlName="password"
-                  maxlength="50" required>
-              <button mat-icon-button type="button" (click)="togglePasswordVisibility()" class="password-toggle-button">
-                  <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
-              </button>
-          </div>
-            <mat-error *ngIf="form.get('password').invalid && (form.get('password').dirty || submitted)">
-              Password must be at least 8 characters long and contain at least one uppercase letter, one numeric value, and one special character.
-            </mat-error>
-          </div>
-          <div class="section-b col-md-12">
-            <mat-label>Confirm Password</mat-label>
-            <!-- <input class="input" type="password" name="confirmPassword" matInput formControlName="confirmPassword" required> -->
-            <div class="password-input-container">
-              <input class="input" type="{{ hideConfirmPassword ? 'password' : 'text' }}" name="confirmPassword" matInput formControlName="confirmPassword"
-                  maxlength="50" required>
-              <button mat-icon-button type="button" (click)="toggleConfirmPasswordVisibility()" class="password-toggle-button">
-                  <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
-              </button>
-          </div>
-            <mat-error *ngIf="form.get('confirmPassword').hasError('required') && (form.get('confirmPassword').dirty || submitted)">
-              Please confirm your password.
-            </mat-error>
-            <mat-error *ngIf="form.get('confirmPassword').hasError('passwordMismatch') && (form.get('confirmPassword').dirty || submitted)">
-              Passwords do not match.
-            </mat-error>
-          </div>
-          <div class="disflex">
-            <button class="disBut" mat-flat-button color="danger" routerLink="/auth/login"
-            type="submit">{{'Back' |
+          <mat-error
+            *ngIf="form.get('confirmPassword').hasError('required') && (form.get('confirmPassword').dirty || submitted)">
+            Please confirm your password.
+          </mat-error>
+          <mat-error
+            *ngIf="form.get('confirmPassword').hasError('passwordMismatch') && (form.get('confirmPassword').dirty || submitted)">
+            Passwords do not match.
+          </mat-error>
+        </div>
+        <div class="disflex">
+          <button class="disBut" mat-flat-button color="primary" routerLink="/auth/login" type="submit">{{'Back' |
             uppercase}}</button>
-            <button [disabled]="form.invalid" class="disBut ml-3" mat-flat-button color="primary" type="submit">Sign Up</button>
-          </div>
-        </form>
-      </div>
+          <button class="disBut ml-3" mat-flat-button color="primary" type="submit">Sign
+            Up</button>
+            <!-- [disabled]="form.invalid" -->
+        </div>
+      </form>
     </div>
   </div>
-  
+</div>
