--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -47,8 +47,22 @@
   padding: 18px 48px;
   .get_started{
     margin-bottom: 40px;
+    position: relative;
     // height: 85vh;
+    .getStartedCont{
+      position: absolute;
+      top: 53%;
+      left: 42%;
+      .getStarted{
+        color: #000000;
+        font-size: 24px;
+        font-weight: 700;
+        // line-height: 70px;
+        letter-spacing: 0em;
+      }
+    }
   }
+
   .ads{
     margin-bottom: 40px;
   }
@@ -96,7 +110,6 @@
         margin-left: 12px;
       }
     }
-
   }
 }
 .flex_align{
@@ -234,25 +247,24 @@
   width: 266px;
   height: 61px;
   flex-shrink: 0;
-  background: linear-gradient(180deg, rgba(26, 26, 26, 0.92) 0%, rgba(28, 28, 28, 0.92) 2.08%, rgba(255, 78, 69, 0.92) 48.44%);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+  // background: linear-gradient(180deg, rgba(26, 26, 26, 0.92) 0%, rgba(28, 28, 28, 0.92) 2.08%, rgba(255, 78, 69, 0.92) 48.44%);
+  background-color: #FF4E45;
+  // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
   border-radius: 120px;
 }
 
-.getStarted button {
-
-  color: #000;
-  // font-family: Archivo Narrow;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 70px; /* 291.667% */
-  text-transform: uppercase;
-  width: 100%;
-  background: none;
-  border: none;
-  text-align: center;
-}
+// .getStarted button {
+//   color: #000;
+//   font-size: 24px;
+//   font-style: normal;
+//   font-weight: 700;
+//   line-height: 70px;
+//   text-transform: uppercase;
+//   width: 100%;
+//   background: none;
+//   border: none;
+//   text-align: center;
+// }
 
 
 @media (max-width: 675px) {
