--- a/src/app/components/experts/experts.component.html
+++ b/src/app/components/experts/experts.component.html
@@ -1,37 +1,4 @@
-<!-- <p style="color: aliceblue; padding: 10px;">experts works!</p> -->
-<!-- <fa-icon [icon]="coffee"></fa-icon> -->
-
 <!-- <div class="mainContainer" style="    display: flex;justify-content: center;width: 100%;height: 100%;">
-    <div class="container">
-        <div class="innercontainer" fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="40px" ngClass.gt-xs="ml-10">
-            <mat-card style="color: #FFFFFF;" *ngFor="let exps of experts;  let i = index" class="expsCard" fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(33%-20px)" fxFlex.gt-md="0 1 calc(25%-20px)">
-                <img mat-card-image [src]="exps.image" class="image">
-             <div class="contBox">
-                <mat-card-title>{{exps.name}}</mat-card-title>
-                <mat-card-subtitle>
-                    {{exps.designation}}
-                </mat-card-subtitle>
-                <mat-card-subtitle>
-                    {{exps.institution}}
-                </mat-card-subtitle>
-                <mat-card-subtitle *ngIf="institutes[i]">{{institutes[i].name}}</mat-card-subtitle>
-                <mat-card-content class="text-wrap-example">
-                    {{exps.introduction}}
-                </mat-card-content>
-             </div>
-             <div class="icons">
-                <fa-icon [icon]="fb" class="icon"></fa-icon>
-                <fa-icon [icon]="x" class="icon"></fa-icon>
-                <fa-icon [icon]="insta" class="icon"></fa-icon>
-                <fa-icon [icon]="li" class="icon"></fa-icon>
-             </div>
-            </mat-card>
-          </div>
-    </div>
-</div> -->
-
-
-<div class="mainContainer" style="    display: flex;justify-content: center;width: 100%;height: 100%;">
     <div class="container">
         <div class="innercontainer" fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="40px" ngClass.gt-xs="ml-10">
             <mat-card style="color: #FFFFFF;" *ngFor="let ops of operators;  let i = index" class="expsCard" fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(33%-20px)" fxFlex.gt-md="0 1 calc(25%-20px)">
@@ -39,24 +6,12 @@
              <div class="contBox">
                 <mat-card-title>{{ops.name}} </mat-card-title><i>{{ops.designation}}</i>
                 <mat-card-subtitle>
-                    <!-- {{ops.institution.name}} -->
                     {{ops.institution.name}}
                 </mat-card-subtitle>
-                <!-- <mat-card-subtitle>
-                    {{ops.designation}}
-                </mat-card-subtitle> -->
-                <!-- <mat-card-subtitle *ngIf="institutes[i]">{{institutes[i].name}}</mat-card-subtitle> -->
                 <mat-card-content class="text-wrap-example">
                     {{ops.introduction}}
                 </mat-card-content>
              </div>
-            <!-- <div class="icons">
-                *ngIf="ops.social_media_link?.fb"
-                <a  target="_blank" href={{ops.social_media_link.fb}}><fa-icon [icon]="facebook" class="icon"></fa-icon></a>
-                <a  target="_blank" href={{ops.social_media_link.x}}><fa-icon [icon]="twitterX" class="icon"></fa-icon></a>
-                <a  target="_blank" href={{ops.social_media_link.insta}}><fa-icon [icon]="instagram" class="icon"></fa-icon></a>
-                <a  target="_blank" href={{ops.social_media_link.li}}><fa-icon [icon]="linkedIn" class="icon"></fa-icon></a>
-            </div> -->
             <div class="icons">
                 <a *ngIf="ops.social_media_link?.fb" target="_blank" [href]="ops.social_media_link?.fb">
                   <fa-icon [icon]="facebook" class="icon"></fa-icon>
@@ -73,5 +28,39 @@
             </div>          
             </mat-card>
           </div>
+    </div>
+</div> -->
+
+<div class="mainContainer" style="display: flex; justify-content: center; width: 100%; height: 100%;">
+    <div class="container">
+        <div class="innercontainer" fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="40px" ngClass.gt-xs="ml-10">
+            <mat-card style="color: #FFFFFF;" *ngFor="let ops of operators; let i = index" class="expsCard"
+                fxFlex.sm="0 1 calc(50%-20px)" fxFlex.md="0 1 calc(50%-20px)" fxFlex.gt-md="0 1 calc(50%-20px)">
+                <img mat-card-image [src]="ops.avatar" class="image">
+                <div class="contBox">
+                    <mat-card-title>{{ops.name}} </mat-card-title><i>{{ops.designation}}</i>
+                    <mat-card-subtitle>
+                        {{ops.institution.name}}
+                    </mat-card-subtitle>
+                    <mat-card-content class="text-wrap-example">
+                        {{ops.introduction}}
+                    </mat-card-content>
+                </div>
+                <div class="icons">
+                    <a *ngIf="ops.social_media_link?.fb" target="_blank" [href]="ops.social_media_link?.fb">
+                        <fa-icon [icon]="facebook" class="icon"></fa-icon>
+                    </a>
+                    <a *ngIf="ops.social_media_link?.twitter" target="_blank" [href]="ops.social_media_link?.twitter">
+                        <fa-icon [icon]="twitterX" class="icon"></fa-icon>
+                    </a>
+                    <a *ngIf="ops.social_media_link?.insta" target="_blank" [href]="ops.social_media_link?.insta">
+                        <fa-icon [icon]="instagram" class="icon"></fa-icon>
+                    </a>
+                    <a *ngIf="ops.social_media_link?.linkedIn" target="_blank" [href]="ops.social_media_link?.linkedIn">
+                        <fa-icon [icon]="linkedIn" class="icon"></fa-icon>
+                    </a>
+                </div>
+            </mat-card>
+        </div>
     </div>
 </div>
