--- a/src/app/auth/sign-up/sign-up-otp/sign-up-otp.component.scss
+++ b/src/app/auth/sign-up/sign-up-otp/sign-up-otp.component.scss
@@ -1,7 +1,7 @@
 .background {
     background-color: #0000;
     background-size: cover;
-    // height: 100vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,8 +20,8 @@ mat-label .required {
 .glassy-form-container {
     margin-top: 10vh;
     background: rgb(118 108 108 / 20%);
-    width: 30%;
-    height: 50vh;
+    width: 40%;
+    height: 75vh;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -115,5 +115,122 @@ mat-label {
 
     100% {
         opacity: 0;
+    }
+}
+.resend-btn{
+    background-color: #FF4E45 !important;
+}
+
+@media screen and (max-width:426px)  {
+    .background{
+        height: 80vh;
+    }
+    .glassy-form-container {
+        width: 90%;
+        height: 60vh;
+        top: 0;
+        padding: 5px;
+    }
+    .section-b {   
+        .input {
+            padding: 10px;
+            border-radius: 5px;
+            width: 100%;
+            line-height: 15px;
+        }
+        mat-select{
+            width: 95% !important;
+        }
+    }
+    .glassy-form {
+        padding: 20px;
+    
+        form {
+            h2 {
+                font-size: 18px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+    mat-label {
+        font-size: 16px;
+    }
+    .header{
+        img{
+            width: 10rem !important;
+            height: 3rem !important;
+        }
+    }
+    .password-toggle-button {
+        right: 10px;
+    }
+}
+
+@media screen and (min-width:427px) and (max-width:769px)  {
+    .background{
+        height: 80vh;
+    }
+    .glassy-form-container {
+        width: 70%;
+        height: 70vh;
+        top: 0;
+    }
+    .section-b {   
+        .input {
+            padding: 15px;
+            border-radius: 5px;
+            width: 100%;
+            line-height: 15px;
+        }
+        mat-select{
+            padding: 15px;
+            width: 100% !important;
+        }
+    }
+    .glassy-form {
+        padding: 20px;
+        form {
+            h2 {
+                font-size: 18px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+    mat-label {
+        font-size: 16px;
+    }
+}
+@media screen and (min-width:770px) and (max-width:1024px) {
+    .background{
+        height: 80vh;
+    }
+    .glassy-form-container {
+        width: 50%;
+        height: 65vh;
+        top: 0;
+    }
+    .section-b {   
+        .input {
+            padding: 15px;
+            border-radius: 5px;
+            width: 100%;
+            line-height: 15px;
+        }
+        mat-select{
+            padding: 15px;
+            width: 100% !important;
+        }
+    }
+    .glassy-form {
+        padding: 20px;
+        form {
+            h2 {
+                font-size: 18px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+    mat-label {
+        font-size: 18px;
     }
 }
