--- a/src/app/components/institution/institution.component.scss
+++ b/src/app/components/institution/institution.component.scss
@@ -1,83 +1,111 @@
 /* app.component.css */
 
-.home_container{
-    color: #fff !important;
-    padding: 18px 48px;
+.home_container {
+  color: #fff !important;
+  padding: 18px 48px;
 }
 
-.grid_list{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 10px;
-  }
+.grid_list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 10px;
+}
 
-  .flex_align{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.flex_align {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-.case_title{
-    font-size: 14px;
-    color: white;
-    font-weight: 600;
-    margin: 5px 0px 5px 0px;
-  }
+.case_title {
+  font-size: 14px;
+  color: white;
+  font-weight: 600;
+  margin: 5px 0px 5px 0px;
+}
 
-  .card_style :hover{
-    // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    // border: 1px solid #FF4E45;
-    // background-color: #fff;
-    // color: #000 !important;
-    .case_title{
+.card_style :hover {
+
+  // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  // border: 1px solid #FF4E45;
+  // background-color: #fff;
+  // color: #000 !important;
+  .case_title {
     //     color: #000 !important;
     border: none;
-    }
-    img{
-        border: none;
-    }
-}
-  
-  .cur_pointer{
-    cursor: pointer !important;
   }
+
+  img {
+    border: none;
+  }
+}
+
+.cur_pointer {
+  cursor: pointer !important;
+}
 
 // .card-container {
 //     display: flex;
 //     flex-wrap: wrap;
 //     justify-content: space-around;
 //   }
-  
+
 //   .example-card {
 //     max-width: 400px;
 //     margin: 16px;
 //   }
 .responsive-image {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
-.card-container{
-    position: relative;
+
+.card-container {
+  position: relative;
 }
-.overlay{
-    // background-color: rgba(0, 0, 0, 0.585);
-    position: absolute;
-    bottom: 5%;
-    // left: 20%;
-    width: 100%;
+
+.overlay {
+  // background-color: rgba(0, 0, 0, 0.585);
+  position: absolute;
+  bottom: 5%;
+  // left: 20%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.overlay-title {
+  // font-family: Roboto;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: 0em;
+  color: #FFFFFF;
+  text-align: center;
+  ;
+}
+
+@media screen and (max-width:426px) {
+  .grid_list {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+  }
+  .flex_align {
     display: flex;
-    justify-content:center;
-}
-.overlay-title{
-    // font-family: Roboto;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 70px;
-    letter-spacing: 0em;
-    color: #FFFFFF;
-    text-align: center;
-    ;   
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
-
-  
+@media screen and (min-width:427px) and (max-width:768px) {
+  .grid_list {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+  .flex_align {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
