--- a/src/app/components/institution/single-institute/single-institute.component.html
+++ b/src/app/components/institution/single-institute/single-institute.component.html
@@ -1,6 +1,3 @@
-<!-- <p style="color: aliceblue; padding: 20px;">single-institute works!</p> -->
-
-
 <!-- <div class="mainCont">
     <div class="container">
         <div class="innerbox1">
@@ -24,8 +21,6 @@
           </div>
         <div *ngIf="allInstitutionList.length!=0">
           <div class="col-12 dis_flex" role="listbox">
-            <!-- <iframe class="map col-7" style="border:0;height: 70vh;" [src]="mapURL" frameborder="0"
-              allowfullscreen></iframe> -->
               <ng-conatiner *ngIf="showMap">
                 <google-map height="500px"
                 width="750px"
@@ -62,4 +57,56 @@
       </div>
     
 </div>
+
+<!-- <div class="home_container">
+  <div class="widget_accordion">
+      <div class="widget_header">
+          <h5 class="mr-auto">Institution Details</h5>
+      </div>
+      <div *ngIf="allInstitutionList.length==0 && showMap">
+          <label class="flex_align">No institution found</label>
+      </div>
+      <div class="spinner-container" *ngIf="!showMap">
+          <mat-spinner [diameter]="50"></mat-spinner>
+      </div>
+      <div *ngIf="allInstitutionList.length!=0">
+          <div class="row">
+              <div class="col-12">
+                  <ng-container *ngIf="showMap">
+                      <google-map height="500px" width="100%" [center]="center" [zoom]="zoom"
+                          (mapClick)="moveMap($event)" (mapMousemove)="move($event)">
+                          <ng-container *ngIf="markerPositions.length">
+                              <map-marker #marker="mapMarker" *ngFor="let markerPosition of markerPositions;let index =i"
+                                  [position]="markerPosition.position" [options]="markerOptions"
+                                  (mapClick)="openInfoWindow(marker,markerPosition,i)">
+                                  <map-info-window>{{markerInfo}}</map-info-window>
+                              </map-marker>
+                          </ng-container>
+                      </google-map>
+                  </ng-container>
+              </div>
+              <div class="col-12 mt-3">
+                  <div class="row">
+                      <div class="col-6">
+                          <img class="mb-2 img-fluid" src="{{ allInstitutionList.image }}" alt="slide">
+                      </div>
+                      <div class="col-6">
+                          <div class="widget_header">
+                              <h5 class="red_text">{{ allInstitutionList.name }}</h5>
+                              <p style="color: #FFFFFF80;font-weight: 600;">{{ allInstitutionList.city }},
+                                  {{ allInstitutionList.country }}</p>
+                          </div>
+                          <div class="dis_flex">
+                              <div class="ml-2">
+                                  <p style="color: white;margin: 5px 0;">{{ allInstitutionList.description }}</p>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div> -->
+
 
