--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
     <app-sidenav *ngIf="show"></app-sidenav>
     <!-- <app-headers *ngIf="show" [screenWidth]="screenWidth"></app-headers> -->
     <app-body [screenWidth]="screenWidth"></app-body>
+    <app-footer></app-footer>
 </ng-container>
