--- a/src/app/components/experts/experts.component.scss
+++ b/src/app/components/experts/experts.component.scss
@@ -41,6 +41,14 @@
     display: grid;
     grid-template-rows: 1fr 1fr 0.2fr;
 }
+.filter_drp{
+    color: white;
+    border: 1px solid;
+    border-radius: 8px;
+    padding: 6px;
+    float: right;
+    // margin-bottom: 12px;
+}
 .image{
     width: 310px;
     height: 270px;
