--- a/src/app/home/home-carousel/home-carousel.component.html
+++ b/src/app/home/home-carousel/home-carousel.component.html
@@ -3,8 +3,8 @@
     <ng-container *ngFor="let list of caseOfTheWeekList;let i =index">
       <ng-container *ngIf="currentIndex==i">
         <div class="col-12 carousel-inner" role="listbox" (click)="enrouteCase(list)">
-          <img class="col-7 mb-2" src="{{ list.thumbnail}}" alt="slide" >
-          <div class="col-5 ml-3">
+          <img class="col-7 responsive mb-2" src="{{ list.thumbnail}}" alt="slide" >
+          <div class="col-5 responsive_txt ml-3">
             <h5 class="red_text">CASE OF THE WEEK - {{list.weekNo}}{{list.weekNo==1?'st':list.weekNo==2?'nd':list.weekNo==3?'rd':'th'}}
               {{'Week of'}} {{ list.month | titlecase }},{{ list.year}}</h5>
             <mat-divider class="mb-2"></mat-divider>
