--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
     <!-- <app-headers *ngIf="show" [screenWidth]="screenWidth"></app-headers> -->
     <app-body [screenWidth]="screenWidth">
     </app-body>
-    <app-footer *ngIf="!hideFooter"></app-footer> 
+    <!-- <app-footer *ngIf="!hideFooter"></app-footer>  -->
 </ng-container>
