--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -62,7 +62,6 @@
     <!-- <disqus [identifier]="pageId" ></disqus> -->
     <div *ngIf="showComment">
       <disqus [identifier]="pageId" ></disqus>
-      <
     </div>
 
     <!-- <div id="hyvor-talk-comments"></div> -->
@@ -94,4 +93,11 @@
 
 
   </div>
+  
+<div class="footerCont">
+  <div class="footerInner">
+      <p>© 2024, Medstream360, All Rights Reserved</p>
+      <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+  </div>
+</div>
 </div>
