--- a/src/app/components/institution/institution.component.html
+++ b/src/app/components/institution/institution.component.html
@@ -16,6 +16,13 @@
       </ng-container>
     </div>
   </div>
+
+  <div class="footerCont">
+    <div class="footerInner">
+        <p>© 2024, Medstream360, All Rights Reserved</p>
+        <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+    </div>
+</div>
  
   
   
