--- a/src/app/components/institution/single-institute/single-institute.component.html
+++ b/src/app/components/institution/single-institute/single-institute.component.html
@@ -58,6 +58,13 @@
     
 </div>
 
+<div class="footerCont">
+  <div class="footerInner">
+      <p>© 2024, Medstream360, All Rights Reserved</p>
+      <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+  </div>
+</div>
+
 <!-- <div class="home_container">
   <div class="widget_accordion">
       <div class="widget_header">
