--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -170,3 +170,9 @@
 
   </div>
 </div>
+<div class="container">
+  <div class="innercontainer">
+      <p>© 2024, Medstream360, All Rights Reserved</p>
+      <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+  </div>
+</div>
