--- a/src/app/components/all-cases/all-cases.component.html
+++ b/src/app/components/all-cases/all-cases.component.html
@@ -111,5 +111,12 @@
           No data found.
         </div>
       </div>
+      <div class="footerCont">
+        <div class="footerInner">
+            <p>© 2024, Medstream360, All Rights Reserved</p>
+            <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+        </div>
+    </div>
     </div>
   </div>
+
