--- a/src/app/components/all-cases/all-cases.component.scss
+++ b/src/app/components/all-cases/all-cases.component.scss
@@ -89,3 +89,27 @@
   .red_txt{
     color: #FF4E45;
   }
+  .footerCont{
+    margin-top: 30px;
+    height: 20vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background-color: white;
+    color: white;
+    .footerInner{
+        // padding: 20px;
+        // height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        p{
+            a{
+                color: #FF4E45;
+                text-decoration: none;
+            }
+        }
+    }
+  }
