--- a/src/app/components/experts/experts.component.scss
+++ b/src/app/components/experts/experts.component.scss
@@ -104,3 +104,27 @@ mat-card-content{
         width: 100%;
     }
 }
+.footerCont{
+    margin-top: 30px;
+    height: 20vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background-color: white;
+    color: white;
+    .footerInner{
+        // padding: 20px;
+        // height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        p{
+            a{
+                color: #FF4E45;
+                text-decoration: none;
+            }
+        }
+    }
+  }
