--- a/src/app/components/institution/single-institute/single-institute.component.scss
+++ b/src/app/components/institution/single-institute/single-institute.component.scss
@@ -48,6 +48,30 @@
 .red_text {
   color: #FF4E45 !important;
 }
+.footerCont{
+  margin-top: 30px;
+  height: 20vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background-color: white;
+  color: white;
+  .footerInner{
+      // padding: 20px;
+      // height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      p{
+          a{
+              color: #FF4E45;
+              text-decoration: none;
+          }
+      }
+  }
+}
 
 //   .spinner-container {
 //     display: flex;
