--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -178,3 +178,10 @@
       </ng-template>
        -->
 </div>
+
+<div class="container">
+  <div class="innercontainer">
+      <p>© 2024, Medstream360, All Rights Reserved</p>
+      <p>Powered by <a target="_blank" href="http://dharstec.com/">Dharstec</a></p>
+  </div>
+</div>
