--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -18,3 +18,28 @@
   .cal-month-view {
     background-color: #000;
 }
+
+.container{
+  margin-top: 30px;
+  height: 20vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background-color: white;
+  color: white;
+  .innercontainer{
+      // padding: 20px;
+      // height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      p{
+          a{
+              color: #FF4E45;
+              text-decoration: none;
+          }
+      }
+  }
+}
