--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -267,6 +267,31 @@
 //   text-align: center;
 // }
 
+.container{
+  margin-top: 30px;
+  height: 20vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background-color: white;
+  color: white;
+  .innercontainer{
+      // padding: 20px;
+      // height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      p{
+          a{
+              color: #FF4E45;
+              text-decoration: none;
+          }
+      }
+  }
+}
+
 
 @media (max-width: 768px) {
  .videos_accordion{
