--- a/src/app/components/experts/experts.component.html
+++ b/src/app/components/experts/experts.component.html
@@ -67,9 +67,9 @@
             </mat-card>
           </div>
     </div>
-</div> -->
+</div> 
 
-<div class="mainContainer" style="display: flex; justify-content: center; width: 100%; height: 100%;">
+<!-- <div class="mainContainer" style="display: flex; justify-content: center; width: 100%; height: 100%;">
     <div class="container">
         <div class="innercontainer" fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="40px" ngClass.gt-xs="ml-10">
             <mat-card style="color: #FFFFFF;" *ngFor="let ops of operators; let i = index" class="expsCard"
@@ -101,7 +101,7 @@
             </mat-card>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="footerCont">
     <div class="footerInner">
