--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
   <div class="home_container">
   <div class="get_started">
     <div class="">
-      <img class="col-12 cur_pointer" routerLink='/user/schedule' src="../../assets/Hero Page getStarted.svg" alt="">
+      <img class="col-12 cur_pointer" routerLink='/user/schedule' src="../../assets/Hero Page.svg" alt="">
       <div class="getStartedCont">
         <button routerLink='/user/schedule' class="getStarted">GET STARTED</button>
       </div>
