--- a/src/app/components/all-cases/all-cases.component.html
+++ b/src/app/components/all-cases/all-cases.component.html
@@ -108,7 +108,7 @@
               {{'Week of'}} {{ video.month | titlecase }},{{ video.year}}</p>
         </div>
         <div class="red_txt" *ngIf=" allCases && allCases.length==0">
-          No data found.
+          No videos to show.
         </div>
       </div>
       <div class="footerCont">
