--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -75,7 +75,7 @@
       <app-chat [pageId]="current_case_id"/>
     </div>
 
-    <img width="" src="../../assets/add_medicine.svg" alt="Video Thumbnail">
+    <img width="" class="full-width" src="../../assets/add_medicine.svg" alt="Video Thumbnail">
 
 
     <div class="recommend-cards">
