--- a/src/app/home/home-carousel/home-carousel.component.html
+++ b/src/app/home/home-carousel/home-carousel.component.html
@@ -19,7 +19,7 @@
                   <p style="color: #FFFFFF80;;font-weight: 600;">{{list.institution ? list.institution.city: 'null' }}, {{list.institution ? list.institution.country: 'null' }} </p>
                 </div>
               </div>
-            <div class="desc_container">
+            <div class="desc_container mb-2">
             <label>Description</label>
             <mat-divider class="mb-2"></mat-divider>
             <p class="des_text">{{list.description}}</p>
