--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -104,7 +104,7 @@
               <ng-container *ngIf="currentIndex==i">
                 <div class="carousel-inner cur_pointer" role="listbox" (click)="enrouteCase(list,'case')">
                   <img class="col-12 mb-2" src="{{ list.thumbnail}}" alt="slide">
-                  <label>{{list.title}}</label>
+                  <label class="mb-2">{{list.title}}</label>
                 </div>
               </ng-container>
 
