--- a/src/app/components/all-cases/all-cases.component.scss
+++ b/src/app/components/all-cases/all-cases.component.scss
@@ -1,5 +1,6 @@
 .grid-container {
     display: grid;
+    padding: 12px;
     grid-template-columns: 1fr 6fr; /* Two columns: 1 small and 2 big */
     height: 100vh; /* Full viewport height */
     background-color: #141414;
@@ -113,3 +114,58 @@
         }
     }
   }
+
+
+  
+@media screen and (min-width:1000px) and  (max-width: 1100px)  {
+ 
+}
+
+@media screen and (min-width:425px) and  (max-width: 768px)  {
+  .case_title{
+    font-size: 12px !important;
+  }
+  .video-card {
+    width: 46%; /* Adjust as needed */
+  }
+  // .videos_accordion{
+  //   display: block !important;
+  // }
+}
+
+@media screen and (min-width:768px) and  (max-width: 1024px)  {
+  .case_title{
+    font-size: 12px !important;
+  }
+  .videos_accordion{
+    display: block !important;
+    // overflow: auto;
+    // max-height: ;
+  }
+  .col-md-8 {
+   width: 100%;
+  }
+  .col-md-4{
+    width: 100%;
+  }
+}
+
+@media (max-width: 426px)  {
+  .grid-container {
+    display: block;
+    .small-column {
+      background: #2E2E2E;
+      padding: 20px;
+      margin: 20px;
+      position: sticky;
+      top: 96px;
+    }
+    .big-column {
+     margin: 20px;
+    }
+    .video-card {
+      width: 100%; /* Adjust as needed */
+    }
+    // grid-template-columns: -1fr 6fr !important; /* Two columns: 1 small and 2 big */
+  }
+}
