--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -11,7 +11,7 @@
     </mat-select>
   </mat-form-field>
   <div class="mt-4 row text-center w-100 mb-3">
-    <div class="col-md-4">
+    <div class="col-md-4 mb-2">
       <div class="btn-group">
         <div class="btn btn-danger" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate"
           (viewDateChange)="closeOpenMonthViewDay()">
