--- a/src/app/home/home-carousel/home-carousel.component.scss
+++ b/src/app/home/home-carousel/home-carousel.component.scss
@@ -8,6 +8,7 @@
     height: 12px;
     border-radius: 50%;
     margin-right: 8px;
+    border: none;
   }
   .carousel_active{
     background-color: #FF4E45 !important;
