--- a/src/app/navbar/sidenav/sidenav.component.html
+++ b/src/app/navbar/sidenav/sidenav.component.html
@@ -6,32 +6,27 @@
 
     <ul class="nav-links">
 
-      <input type="checkbox" id="checkbox_toggle" />
+      <input type="checkbox" id="checkbox_toggle" [(ngModel)]="hamburg" />
       <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
-      <div class="menu">
+      <div class="menu" id="menu-nav">
         <!-- <li class="services">
           <a href="javascript:void(0)" routerLink='/user/all-cases'>Home</a>
         </li> -->
         <li><a class="sidenav-link-text" routerLink='/user/landing' routerLinkActive="active"
-            [routerLinkActiveOptions]="{exact:true}">Home</a></li>
-        <li class="vertical-bar"><a href="javascript:void(0)" routerLink='/user/schedule' routerLinkActive="active"
-            [routerLinkActiveOptions]="{exact:true}">Schedule</a></li>
+            [routerLinkActiveOptions]="{exact:true}" (click)="hamburg=false">Home</a></li>
+        <li class="sidenav-link-text vertical-bar"><a href="javascript:void(0)" routerLink='/user/schedule' routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact:true}" (click)="hamburg=false">Schedule</a></li>
         <li><a class="sidenav-link-text vertical-bar" routerLink='/user/all-cases' routerLinkActive="active"
-            [routerLinkActiveOptions]="{exact:true}">All Cases</a></li>
-
-        <!-- <li class="vertical-bar"><a href="javascript:void(0)">Schedule</a></li> -->
-
-
+            [routerLinkActiveOptions]="{exact:true}" (click)="hamburg=false">All Cases</a></li>
 
         <!-- <li class="vertical-bar"><a href="javascript:void(0)"> Experts</a></li> -->
         <!-- <li><a class="sidenav-link-text vertical-bar" routerLink='/user/experts'  routerLinkActive="active"
           [routerLinkActiveOptions]="{exact:true}">Experts</a></li> -->
         <li><a class="sidenav-link-text vertical-bar" routerLink='user/operators' routerLinkActive="active"
-            [routerLinkActiveOptions]="{exact:true}">Operators</a></li>
+            [routerLinkActiveOptions]="{exact:true}" (click)="hamburg=false">Operators</a></li>
         <li><a class="sidenav-link-text vertical-bar" routerLink='user/institution' routerLinkActive="active"
-            [routerLinkActiveOptions]="{exact:true}">Institutions</a></li>
-        <!-- <li class="vertical-bar"><a href="javascript:void(0)">Institutions</a></li>  -->
+            [routerLinkActiveOptions]="{exact:true}" (click)="hamburg=false">Institutions</a></li>
       </div>
     </ul>
     <!-- <div> -->
