--- a/src/app/navbar/sidenav/sidenav.component.scss
+++ b/src/app/navbar/sidenav/sidenav.component.scss
@@ -112,6 +112,14 @@ input[type=checkbox] {
     left: 0;
     text-align: center;
     padding: 16px 0;
+    li{
+      display: flex;
+      justify-content: center;
+    }
+  }
+
+  .vertical-bar::before {
+   display: none;
   }
 
   .menu li:hover {
