--- a/src/app/components/all-cases/single-case/single-case.component.scss
+++ b/src/app/components/all-cases/single-case/single-case.component.scss
@@ -2,7 +2,7 @@
     display: grid;
     padding: 12px;
     grid-template-columns: 6fr 2fr; 
-    height: 100vh; /* Full viewport height */
+    // height: 100vh; /* Full viewport height */
     background-color: #141414;
 
   }
@@ -97,7 +97,7 @@
   justify-content: center;
 }
 .footerCont{
-  margin-top: 30px;
+  // margin-top: 30px;
   height: 20vh;
   width: 100%;
   display: flex;
