--- a/src/app/components/all-cases/all-cases.component.scss
+++ b/src/app/components/all-cases/all-cases.component.scss
@@ -2,7 +2,7 @@
     display: grid;
     padding: 12px;
     grid-template-columns: 1fr 6fr; /* Two columns: 1 small and 2 big */
-    height: 100vh; /* Full viewport height */
+    // height: 100vh; /* Full viewport height */
     background-color: #141414;
   }
   
@@ -91,7 +91,7 @@
     color: #FF4E45;
   }
   .footerCont{
-    margin-top: 30px;
+    // margin-top: 30px;
     height: 20vh;
     width: 100%;
     display: flex;
@@ -121,7 +121,7 @@
  
 }
 
-@media screen and (min-width:425px) and  (max-width: 768px)  {
+@media screen and (min-width:426px) and  (max-width: 768px)  {
   .case_title{
     font-size: 12px !important;
   }
@@ -131,6 +131,22 @@
   // .videos_accordion{
   //   display: block !important;
   // }
+  .sticky_sideNav{
+    display: block !important;
+  }
+  .hide_filter{
+    display: none !important;
+  }
+}
+
+@media screen and (min-width:426px) and  (max-width: 700px)  {
+  .case_title{
+    font-size: 12px !important;
+  }
+  .video-card {
+    width: 100%; /* Adjust as needed */
+  }
+
 }
 
 @media screen and (min-width:768px) and  (max-width: 1024px)  {
@@ -148,6 +164,13 @@
   .col-md-4{
     width: 100%;
   }
+
+  .sticky_sideNav{
+    display: block !important;
+  }
+  .hide_filter{
+    display: none !important;
+  }
 }
 
 @media (max-width: 426px)  {
@@ -159,6 +182,7 @@
       margin: 20px;
       position: sticky;
       top: 96px;
+      // height: 100vh;
     }
     .big-column {
      margin: 20px;
